# qql-rs

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  check_output.txt  docker-compose.yml  feedback.md  s.md
.github/workflows/: ci.yml  release.yml
.opencode/agents/: product-ui.md  rust-engineer.md
.opencode/skills/agy/: SKILL.md
bench/: README.md  bench_node.js  bench_python.py  bench_test.go  go.mod  go.sum
bench/bench_rust/: Cargo.toml
bench/bench_rust/src/: main.rs
crates/gqql/: Cargo.toml  Makefile  README.md  go.mod  gqql.go  gqql_test.go
crates/gqql/src/: lib.rs
crates/nqql/: Cargo.toml  README.md  index.js  package.json  test.js
crates/nqql/src/: lib.rs
crates/pyqql/: Cargo.toml  README.md  pyproject.toml
crates/pyqql-edge/: Cargo.toml  README.md  pyproject.toml
crates/pyqql-edge/src/: lib.rs
crates/pyqql-edge/tests/: test_parser.py
crates/pyqql/pyqql/: __init__.py
crates/pyqql/src/: lib.rs
crates/pyqql/tests/: test_parser.py
crates/qql-cli/: Cargo.toml  README.md
crates/qql-cli/src/: commands.rs  convert.rs  dump.rs  main.rs  output.rs  script.rs  table.rs
crates/qql-core/: Cargo.toml  README.md
crates/qql-core/src/: ast.rs  ast_test.rs  error.rs  error_test.rs  explain.rs  lexer.rs  lexer_test.rs  lib.rs  offline.rs  offline_test.rs  parser_test.rs  tests.rs  token.rs
crates/qql-core/src/ast/: filter.rs  formula.rs  mod.rs  statement.rs  transform.rs  value.rs
crates/qql-core/src/filter_conv/: converter.rs
crates/qql-core/src/filter_conv_test/: equality.rs  logical.rs  mod.rs  sets_matching.rs
crates/qql-core/src/parser/: alter_drop_show.rs  config_parsers.rs  config_validation.rs  create.rs  cte.rs  filter.rs  formula.rs  helpers.rs  insert.rs  mod.rs  point_ops.rs  query.rs  query_clauses.rs  select.rs  update.rs  upsert.rs  with_clause.rs
crates/qql-core/src/parser_test/: errors.rs  formulas.rs  mod.rs  readme.rs
crates/qql-core/src/parser_test/filters/: between_in.rs  comparisons.rs  logic.rs  mod.rs
crates/qql-core/src/parser_test/inserts_updates_scroll/: ddl_create.rs  ddl_manage.rs  inserts.rs  mod.rs  select_scroll_delete.rs  updates.rs  upserts.rs
crates/qql-core/src/parser_test/queries/: misc_query.rs  mod.rs  nearest.rs  prefetch_cte.rs  select_sample_order.rs
crates/qql-core/src/tests/: ddl_tests.rs  filter_tests.rs  lexer_tests.rs  mod.rs  negative_tests.rs  parser_tests.rs  transform_tests.rs
crates/qql-edge/: Cargo.toml  README.md
crates/qql-edge/src/: backend.rs  embedder.rs  lib.rs
crates/qql-edge/src/backend/: config_builder.rs  conversions.rs  mod.rs  query_converter.rs  vector_parser.rs
crates/qql-embed/: Cargo.toml  README.md
crates/qql-embed/src/: embedder.rs  lib.rs  resolve.rs  resolve_test.rs  sparse.rs  sparse_test.rs
crates/qql-plan/: Cargo.toml  README.md
crates/qql-plan/src/: ddl.rs  embedding.rs  filter.rs  lib.rs  mutation.rs  plan.rs  query.rs  routing.rs  semantic.rs  types.rs
crates/qql-runtime/: Cargo.toml  README.md  build.rs
crates/qql-runtime/src/: backend.rs  client.rs  config.rs  contract_test.rs  embedder.rs  executor.rs  executor_test.rs  filter_conv.rs  filter_conv_test.rs  grpc.rs  grpc_route.rs  lib.rs  offline.rs  pipeline.rs  pipeline_test.rs  qdrant.rs  qdrant_grpc.rs  rest.rs  sparse.rs
crates/qql-runtime/src/executor/: ddl.rs  dml.rs  helpers.rs  mod.rs
crates/qql-runtime/src/executor/dml/: config.rs  delete.rs  embedding.rs  helpers.rs  insert.rs  mod.rs  query.rs  select.rs  update.rs  upsert.rs
crates/qql-runtime/src/filter_conv/: converter.rs  mod.rs  types.rs
crates/qql-runtime/src/filter_conv_test/: equality.rs  logical.rs  mod.rs  sets_matching.rs
crates/qql-runtime/src/pipeline/: embed_nodes.rs  formula_nodes.rs  helpers.rs  mod.rs  query_nodes.rs
crates/qql-runtime/tests/: live_integration_test.rs
crates/qql-wasm/: Cargo.toml  README.md
crates/qql-wasm/src/: lib.rs
demo/: app.js  index.html  serve.sh
docs/: filters.md  inject_filter.md  syntax.md
examples/: README.md
examples/airbnb-demo/: README.md  config.py  ingest.py
examples/edge-demo/: README.md  main.py  run-edge-demo.sh
examples/go/01_basic_parse/: go.mod  main.go
examples/go/02_medium_inject/: go.mod  main.go
examples/go/03_expert_gateway/: go.mod  main.go
examples/go/04_high_perf_batch/: go.mod  main.go
examples/medical-retrieval-ops/: .gitignore  01-provision.qql  README.md  agent-playbook.md  build-medical-corpus.py  run-benchmark.py  run-benchmark.sh  run-demo.ps1  run-demo.sh  run_demo.py  validate-artifacts.ps1  validate-artifacts.sh
examples/medical-showcase/: main.py
examples/nodejs/: 01_basic_parse.mjs  02_medium_inject.mjs  03_expert_gateway.mjs  04_high_perf_batch.mjs  basic_to_medium.mjs  medium_to_expert.mjs
examples/python/: 01_basic_parse.py  02_medium_inject.py  03_expert_gateway.py  04_high_perf_batch.py  basic_to_medium.py  medium_to_expert.py
examples/rust/01_basic_parse/: Cargo.toml
examples/rust/01_basic_parse/src/: main.rs
examples/rust/02_medium_inject/: Cargo.toml
examples/rust/04_high_perf_batch/: Cargo.toml
examples/rust/medium_to_expert/: Cargo.toml
examples/sec10k-qql/: agent.py  config.py  ingest.py  pyproject.toml  query.py
examples/wasm/: 01_basic_parse.js  02_medium_inject.js  03_expert_gateway.js  04_high_perf_batch.js  basic_to_medium.js  medium_to_expert.js
experiment/: bench_e2e.py
scripts/: prune-target.sh
skills/qql-skill/: SKILL.md
skills/qql-skill/references/: inject-filter.md  node-sdk.md  python-sdk.md  qql-examples.md  qql-gaps.md  qql-install.md  qql-multitenancy.md  rust-sdk.md  wasm-sdk.md
skills/qql-skill/scripts/: _qql_cli.py  demo_kitchen_sink.py  demo_medical_records.py  demo_multivector.py  demo_retrieval_modes.py
wasm-demo/: AGENT.md  README.md  index.html  package.json  package.json.tmp  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
wasm-demo/src/: App.tsx  index.css
wasm-demo/src/hooks/: use-qql.ts
wasm-demo/src/lib/: browser-embedder.ts  editor-theme.ts  presets.ts  qql-language.ts  qql-types.ts
wasm-demo/src/types/: qql-wasm.d.ts
(+16 files in other folders)
