[workspace]
resolver = "2"
members = [
    "crates/qql-core",
    "crates/qql-plan",
    "crates/qql-embed",
    "crates/qql-runtime",
    "crates/qql-cli",
    "crates/qql-edge",
    "crates/qql-wasm",
    "crates/pyqql",
    "crates/pyqql-edge",
    "crates/nqql",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
