[workspace]

[package]
name = "bench_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
qql-core = { path = "../../crates/qql-core" }
qql-plan = { path = "../../crates/qql-plan" }
qql = { path = "../../crates/qql-runtime" }
qql-edge = { path = "../../crates/qql-edge" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tempfile = "3"
