[package]
name = "nqql"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
qql = { path = "../qql-runtime" }
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"
serde_json = "1"
