[package]
name = "pyqql-edge"
version.workspace = true
edition.workspace = true
description = "QQL local edge executor for Python — qdrant-edge + fastembed, zero network"

[lib]
crate-type = ["cdylib"]

[features]
default = ["http-embedding"]
# HTTP-based embedding provider (OpenAI-compatible API).
http-embedding = ["qql-edge/http-embedding"]

[dependencies]
qql-core = { path = "../qql-core", features = ["serde"] }
qql-plan = { path = "../qql-plan" }
qql = { path = "../qql-runtime", default-features = false }
qql-edge = { path = "../qql-edge" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pythonize = "0.23"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
