[package]
name = "pyqql"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
qql = { path = "../qql-runtime" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pythonize = "0.23"
serde_json = "1"
