[package]
name = "pyqql"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["rest"]
grpc = ["qql/grpc"]
rest = ["qql/rest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
qql = { path = "../qql-runtime", default-features = false }
pyo3 = { version = "0.23", features = ["extension-module"] }
pythonize = "0.23"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
