[package]
name = "pyqql"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["rest", "grpc"]
rest = ["qql/rest"]
grpc = ["qql/grpc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
qql-plan = { path = "../qql-plan" }
qql = { path = "../qql-runtime", default-features = false, features = ["rest", "grpc"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pythonize = "0.23"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
