[package]
name = "qql-core"
version.workspace = true
edition.workspace = true

[features]
default = []
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
std = []

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
