[package]
name = "qql-edge"
version.workspace = true
edition.workspace = true
description = "Local/edge QQL executor — fastembed-rs + qdrant-edge, zero network hops"

[dependencies]
qql-core = { path = "../qql-core", features = ["serde", "std"] }
qql = { path = "../qql-runtime" }

fastembed = "5"
qdrant-edge = "0.7"

tokio = { version = "1", features = ["rt", "sync"] }
async-trait = "0.1"
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
