[package]
name = "qql-plan"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
qql-core = { path = "../qql-core", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
qql-core = { path = "../qql-core", features = ["serde"] }
serde_json = { version = "1" }
