[package]
name = "qql"
version.workspace = true
edition.workspace = true

[dependencies]
qql-core = { path = "../qql-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[build-dependencies]
typify = "0.7"
serde_json = "1"
schemars = "0.8"
