[package]
name = "qql"
version.workspace = true
edition.workspace = true

[features]
default = ["grpc", "rest"]
grpc = ["dep:qdrant-client"]
rest = []

[dependencies]
qql-core = { path = "../qql-core", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
qdrant-client = { version = "1.18", default-features = false, optional = true, features = ["serde"] }

[build-dependencies]
typify = "0.7"
serde_json = "1"
schemars = "0.8"
