[package]
name = "qql-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
runtime = ["q/rest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
q = { package = "qql", path = "../qql-runtime", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
serde-wasm-bindgen = "0.6"
