[package]
name = "qql-wasm"
version.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = "0.6"
