[package]
name = "qql-wasm"
version.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
# Shrink the .wasm binary; falls back gracefully if binaryen is missing at build time
# only if you pass --no-opt. Prefer installing `wasm-opt` (binaryen) for release packs.
wasm-opt = ["-O", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["client"]
# Browser Client + fetch + embedders (gloo-net). Disable for a parser/compiler-only build:
#   cargo build -p qql-wasm --target wasm32-unknown-unknown --no-default-features
client = ["dep:gloo-net", "dep:wasm-bindgen-futures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qql-core = { path = "../qql-core", features = ["serde", "json"] }
qql-plan = { path = "../qql-plan" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = "0.3"
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", optional = true }
